[package]
name = "refactored-guacamole"
version = "0.1.0"
edition = "2021"
authors = ["othelarian <le.maitre.killian@gmail.com>"]

[dependencies]
console_log = "0.2.0"
getrandom = {version = "0.2.5", features = ["js"]}
log = "0.4.14"
rand = "0.8.5"
yew = "0.19.3"
yew-agent = "0.1.0"

#[dependencies.web-sys]
#version = "0.3.55"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 'z'
lto = true