[package]
name = "refactored-guacamole"
version = "0.2.0"
edition = "2021"
authors = ["othelarian <le.maitre.killian@gmail.com>"]

[dependencies]
console_log = "0.2.0"
getrandom = {version = "0.2.5", features = ["js"]}
log = "0.4.14"
rand = "0.8.5"
serde = "1.0.136"
strum = "0.24.0"
strum_macros = "0.24.0"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
yew = "0.19.3"
yew-agent = "0.1.0"

[dependencies.web-sys]
version = "0.3.55"
features = ["HtmlSelectElement"]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 'z'
lto = true
